k8s/environments/logging/elk/kibana/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  labels:
    env: production
    tier: logging
    app: kibana
spec:
  ingressClassName: nginx # <- NGINX Ingress Controller를 사용  
  rules:
    - host: kibana.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana
                port:
                  number: 5601
